objects/Project_Team__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_Training_End_Date__c</fullName>
        <label>Confirmed Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start_Date__c</fullName>
        <label>Confirmed Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Team_Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Team_Member__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Creative Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Implementation Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>looks up a Salesforce User</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Team</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>